[package]
name = "hello"
version = "0.1.0"
edition = "2018"
description = "Test"
homepage = "https://github.com/hommeabeil/hello.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-server = {git = "https://github.com/actix/actix-net.git", branch = "master"}
